# Rust-spreadsheet-webapp

./: ..gitignore.un~  .gitignore  .readme.md.un~  Cargo.toml  Makefile  clippy_errors.txt  config.sh  out.txt  out1.txt  out2.txt  out3.txt  out4.txt  out5.txt  out_chain.txt  out_nw1.txt  readme.md  tarpaulin-report.html  temp.txt  test_case_limits.md
.github/workflows/: rust.yml
actix-spreadsheet/: Cargo.toml  README.md
actix-spreadsheet/src/: base.html  index.html  routes  spreadsheet.html
actix-spreadsheet/src/css/: style.css
actix-spreadsheet/src/js/: main.js  spreadsheet.js   # Client-side spreadsheet UI
actix-spreadsheet/src/main.rs              # Application entry point/app.rs               # Application state and setup/: session.rs       # Session management
actix-spreadsheet/src/main.rs              # Application entry point/app.rs               # Application state and setup/mod.rs           # Route module exports/: pages.rs         # Page handlers 
actix-spreadsheet/src/models/: mod.rs  spreadsheet.rs   # Core spreadsheet functionality (from existing code)
src/: .app.rs.un~  .main.rs.un~  app.rs  cell.rs  downloader.rs  graph.rs  lib.rs  loader.rs  login.rs  mailer.rs  main.rs  new_main.rs  saving.rs  spreadsheet.rs  tempCodeRunnerFile.rs  web.rs
src/.cph/: .spreadsheet.rs_0ec941aaea55790585203c632200dccc.prob
src/report/: report.tex
src/static/: index.html  landing  landing.html  list.html  login.html  password.html  sheet.html  signup.html
