[package]
name = "spreadsheet"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

# Core dependencies needed by all parts of the application
[dependencies]
regex = "1.10.2"
bincode = "1.3"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotters = "0.3"
image = "0.24" 
tempfile = "3.6.0"
getrandom = { version = "0.2", features = ["js"] }

# Web dependencies - only used when the "web" feature is enabled
tokio = { version = "1.28", features = ["full"], optional = true }
axum = { version = "0.7", features = ["json", "multipart"], optional = true }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"], optional = true }
env_logger = { version = "0.10", optional = true }
actix-web = { version = "4.3", optional = true }
actix-files = { version = "0.6", optional = true }
handlebars = { version = "4.3", features = ["dir_source"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = []
web = ["tokio", "axum", "tower-http", "env_logger", "actix-web", "actix-files", "handlebars", "wasm-bindgen", "js-sys"]

# CLI spreadsheet binary (no web dependencies)
[[bin]]
name = "spreadsheet"
path = "src/bin/cli.rs"

# Web server binary (requires web dependencies)
[[bin]]
name = "website" 
path = "src/bin/web.rs"
required-features = ["web"]

# Test binaries
[[bin]]
name = "cell_test"
path = "src/bin/cell_test.rs"

[[bin]]
name = "spreadsheet_test"
path = "src/bin/spreadsheet_test.rs"

[[bin]]
name = "saving_test"
path = "src/bin/saving_test.rs"

[[bin]]
name = "graph_test"
path = "src/bin/graph_test.rs"

[lib]
name = "cop"
path = "src/lib.rs"
