[package]
name = "spreadsheet"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

# Core dependencies needed by all parts of the application
[dependencies]
# Utils and core functionality
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
chrono = "0.4"
bincode = "1.3"
flate2 = "1.0"
rust_xlsxwriter = "0.44"
regex = "1.10.2"
plotters = "0.3"
image = "0.24" 
tempfile = "3.6.0"
getrandom = "0.2"

# Authentication & security
argon2 = { version = "0.5", features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
time = "0.3"

# Web dependencies - marked as optional
axum = { version = "0.7", features = ["macros", "multipart"], optional = true }
axum-extra = { version = "0.9", features = ["cookie"], optional = true }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"], optional = true }
tower = { version = "0.4", optional = true }
tokio = { version = "1.28", features = ["full"], optional = true }
env_logger = { version = "0.10", optional = true }
actix-web = { version = "4.3", optional = true }
actix-files = { version = "0.6", optional = true }
handlebars = { version = "4.3", features = ["dir_source"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = []
web = ["tokio", "axum", "axum-extra", "tower-http", "tower", "env_logger", "actix-web", "actix-files", "handlebars", "wasm-bindgen", "js-sys"]

# CLI spreadsheet binary (no web dependencies)
[[bin]]
name = "spreadsheet"
path = "src/bin/cli.rs"

# Web server binary (requires web dependencies)
[[bin]]
name = "website" 
path = "src/bin/web.rs"
required-features = ["web"]

# Test binaries
[[bin]]
name = "cell_test"
path = "src/bin/cell_test.rs"

[[bin]]
name = "spreadsheet_test"
path = "src/bin/spreadsheet_test.rs"

[[bin]]
name = "graph_test"
path = "src/bin/graph_test.rs"

[lib]
name = "cop"
path = "src/lib.rs"
